--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Login</title>
     <link rel="stylesheet" href="estilos/estilo-mobile.css">
-    <link rel="stylesheet" href="estilos/estilo-tablet.css">
+    <link rel="stylesheet" href="estilos/estilo-telasgrandes.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <main>
@@ -18,7 +20,23 @@
                 </h1>
                 <p>Seja bem vindo(a) novamente! Faça seu login e tenha acesso a suas configurações!</p>
                 <form action="bancodedados.php" method="post">
-                    
+                    <div class="campo">
+                        <span class="material-icons">
+                            person
+                            </span>
+                        <input type="email" name="login" id="ilogin" required maxlength="40" autocomplete="email" placeholder="seu e-mail">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-icons">
+                            vpn_key
+                            </span>
+                        <input type="password" name="senha" id="isenha" required minlength="6" maxlength="20" autocomplete="current-password" placeholder="sua senha">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#" class="botao">Esqueci minha senha</a>
+
                 </form>
             </div>
         </section>
